packages/taquito-michel-codec/test/contracts_015/ill_typed/failwith_big_map.tz
# This contract uses FAILWITH to expose a big map diff
# See https://gitlab.com/tezos/tezos/-/issues/1708#note_667884499

parameter (big_map int int);

# Even if the stored big_map is dropped by the initial CAR instruction,
# it can still be accessed by its big-map id and sent as parameter so
# it is important that the type of the storage matches the type of the
# parameter.

# This test is now ill-typed because FAILWITH accepts only packable types

storage (big_map int int);

code { CAR;
       PUSH (option int) (Some 1);
       PUSH int 1;
       UPDATE;
       PUSH (option int) None;
       PUSH int 2;
       UPDATE;
       FAILWITH }
